[gd_scene load_steps=12 format=2]

[ext_resource path="res://Instances/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/background.jpg" type="Texture" id=2]
[ext_resource path="res://Scenes/CloudPlatform.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Camera2D.gd" type="Script" id=4]
[ext_resource path="res://Scripts/World.gd" type="Script" id=5]
[ext_resource path="res://Scenes/MovingCloudPlatform.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/TrappedCloud.tscn" type="PackedScene" id=7]
[ext_resource path="res://Font/Fresh Coconut.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Scenes/Score.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="World" type="Node2D"]
script = ExtResource( 5 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( -149.199, 83.4386 )
gravity_scale = 7.0
camera_path = NodePath("../Camera2D")

[node name="Score" type="Label" parent="Player"]
margin_left = 16.2702
margin_top = -77.3514
margin_right = 133.27
margin_bottom = -26.3514
theme = SubResource( 2 )
text = "00000"
align = 2
valign = 1
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 580, 800 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
margin_left = -2670.18
margin_top = 2047.91
margin_right = 10592.8
margin_bottom = 7083.91
rect_scale = Vector2( 0.258466, -0.551735 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 4 )
player_path = NodePath("../Player")

[node name="CloudPlatform" parent="." instance=ExtResource( 3 )]
position = Vector2( -150.377, 136.996 )

[node name="MovingCloudPlatform2" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 132.149, 58.733 )

[node name="TrappedCloud" parent="." groups=[
"Unstable",
] instance=ExtResource( 7 )]
visible = false
position = Vector2( -4.59618, 49.1439 )
[connection signal="last_cloud_y" from="." to="Camera2D" method="set_gen_step"]
[connection signal="new_cloud" from="Camera2D" to="." method="generateCloud"]
[connection signal="on_move" from="Camera2D" to="Player/Score" method="_on_move"]
[connection signal="on_move" from="Camera2D" to="." method="remove_undisplay_child"]
